Test_Devops/force-app/main/default/objects/Account/fields/Parent_Organization__c.field-meta.xml
<CustomField>
    <fullName>Parent_Organization__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Organization</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.RecordTypeId</field>
            <operation>equals</operation>
            <value>Test_Account2</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>