Test_Devops/force-app/main/default/objects/Account/fields/Website_Link__c.field-meta.xml
<CustomField>
    <fullName>Website_Link__c</fullName>
    <formula>Hyperlink(&quot;My Website Link&quot;,&quot;abc.com&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Website Link</label>
    <type>Text</type>
</CustomField>