Test_Devops/force-app/main/default/objects/Account/recordTypes/Test_Account1.recordType-meta.xml
<RecordType>
    <fullName>Test_Account1</fullName>
    <active>true</active>
    <label>Test_Account1</label>
</RecordType>