Test_Devops/force-app/main/default/objects/Account/recordTypes/Test_Account2.recordType-meta.xml
<RecordType>
    <fullName>Test_Account2</fullName>
    <active>true</active>
    <label>Test_Account2</label>
</RecordType>